== 2.5.0

* Adding note that Markdown is actually MultiMarkdown, and recommending the use
  of the `kramdown` engine for parsing it.
* Improved Markdown formatting considerably.
* Bugfix: Needed to use inline-code tag for column and table names, otherwise
  underscores would cause havok with the formatting.
* Bugfix: Markdown syntax was incorrect (can't have trailing spaces before the
  closing marker for an emphasis tag).
* Bugfix: Remove-annotations wasn't properly finding test/spec files, and
  wasn't even looking for FactoryGirl factories under the new naming
  convention.
* Bugfix: Load the Rakefile from the current directory, not the first Rakefile
  in our load path.
* Added support for new FactoryGirl naming convention.
* Fix behavior of route annotations in newer versions of Rake that don't spit
  out the CWD as their first line of output.
* Overhauled integration testing system to be much easier to work with, better
  compartmentalized, and so forth -- at the cost that you must be using RVM to
  utilize it.  (It'll spit out appropriate pending messages if you don't.)
  Also includes a mode for "tinkering" by hand with a scenario, and won't let
  you run it through rspect if the repo is in a dirty state.  Added appropriate
  rake tasks to help with all of this.
* Routes can now be appended, pre-pended, or removed -- and do sane things in
  all cases.
* Expose all `position_*` variables as CLI params.
* Make `ENV ['position']` work as a default for all the `ENV ['position_*']`
  variables.
* Fixed that schema kept prepending additional newlines
* Updates to make annotate smarter about when to touch a model
* Recognize column+type, and don't change a file unless the column+type
  combination of the new schema are different than that of the old (i.e., don't
  regenerate if columns happen to be in a different order. That's just how life
  is sometimes)
* Works better with Rails 3
* Bugfix: schema kept prepending additional newlines