@@ -23,12 +23,6 @@ module AnnotateRoutes
   def self.do_annotations(options={})
     return unless(routes_exists?)
 
-    if options[:require]
-      options[:require].each do |path|
-        require path
-      end
-    end
-
     position_after = options[:position_in_routes] != 'before'
 
     routes_map = `rake routes`.split(/\n/, -1)
@@ -73,12 +67,6 @@ module AnnotateRoutes
 
   def self.remove_annotations(options={})
     return unless(routes_exists?)
-
-    if options[:require]
-      options[:require].each do |path|
-        require path
-      end
-    end
 
     (content, where_header_found) = strip_annotations(File.read(routes_file))
 
