@@ -315,7 +315,15 @@ end
     end
 
     def annotate_one_file options = {}
-      AnnotateModels.annotate_one_file(@model_file_name, @schema_info, options)
+      Annotate.set_defaults(options)
+      options = Annotate.setup_options(options)
+      AnnotateModels.annotate_one_file(@model_file_name, @schema_info, :position_in_class, options)
+
+      # Wipe settings so the next call will pick up new values...
+      Annotate.instance_variable_set('@has_set_defaults', false)
+      Annotate::POSITION_OPTIONS.each { |key| ENV[key.to_s] = '' }
+      Annotate::FLAG_OPTIONS.each { |key| ENV[key.to_s] = '' }
+      Annotate::PATH_OPTIONS.each { |key| ENV[key.to_s] = '' }
     end
 
     it "should annotate the file before the model if position == 'before'" do
