@@ -1,5 +1,7 @@
 == 2.5.0
 
+* It's now possible to use Annotate in standalone ActiveRecord (non-Rails)
+  projects again.
 * Adding note that Markdown is actually MultiMarkdown, and recommending the use
   of the `kramdown` engine for parsing it.
 * Improved Markdown formatting considerably.
@@ -49,7 +51,8 @@
 * Allow task loading from Rakefile for gems (plugin installation already
   auto-detects).
 * Add skip_on_db_migrate option as well for people that don't want it
-* Fix options parsing to convert strings to proper booleans
+* Fix options parsing to convert strings to proper booleans. Change annotate to
+  use options hash instead of ENV.
 * Add support for Fabrication fabricators
 * Leave magic encoding comment intact
 * Fix issue #14 - RuntimeError: Already memoized
